--- a/.github/workflows/workflow_a.yml
+++ b/.github/workflows/workflow_a.yml
@@ -9,14 +9,14 @@ on:
         default: false
 
 jobs:
-  job1:
+  wf_a_job1:
     if: inputs.skip_job1 != 'true'
     runs-on: ubuntu-20.04
     steps:
       - name: Echo
         run: echo 'Job1 done.'
 
-  job2:
+  wf_a_job2:
     runs-on: ubuntu-20.04
     steps:
       - name: Echo
