--- a/.github/workflows/workflow_a.yml
+++ b/.github/workflows/workflow_a.yml
@@ -18,6 +18,8 @@ jobs:
 
   wf_a_job2:
     runs-on: ubuntu-20.04
+    needs:
+      - wf_a_job1
     steps:
       - name: Echo
         run: echo 'Job2 done.'
