--- a/.github/workflows/workflow_a.yml
+++ b/.github/workflows/workflow_a.yml
@@ -20,6 +20,7 @@ jobs:
     runs-on: ubuntu-20.04
     needs:
       - wf_a_job1
+    if: ${{ inputs.skip_job1 || succsuccess() }}
     steps:
       - name: Echo
         run: echo 'Job2 done.'
